--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.github.javafaker:javafaker:1.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	implementation 'com.github.javafaker:javafaker:1.0.2'
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.3'
+
+//	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.3'   // xml 처리
 
 
 	compileOnly 'org.projectlombok:lombok'
