--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,10 +68,10 @@ spring:
   ###############################
   # Security User
   ###############################
-  security:
-    user:
-      name: test@test.com
-      password: 1111
+#  security:
+#    user:
+#      name: abc@test.com
+#      password: 1111
 
 ###############################
 # Log info
